dataset/CVE-2020-36441_repair/target/debug/build/crossbeam-utils-db937186af530d1f/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/4d91de4e48198da2e33413efdcd9cd2cc0c46688/library/core/src/sync/atomic.rs:3105:1
 ::: /rustc/4d91de4e48198da2e33413efdcd9cd2cc0c46688/library/core/src/sync/atomic.rs:3122:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
